apps/scrutiny/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: scrutiny-api
  namespace: mgd-default
  labels:
    milano.app: scrutiny
    milano.level: managed
  annotations:
    gethomepage.dev/href: "https://scrutiny.trusted.nirmalhk7.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: scrutiny-light	
    gethomepage.dev/app: scrutiny # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Scrutiny
    gethomepage.dev/widget.type: "scrutiny"
    gethomepage.dev/widget.url: "https://scrutiny.trusted.nirmalhk7.com"
    
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: "Host(`scrutiny.trusted.nirmalhk7.com`)"
      kind: Rule
      services:
        - name: scrutiny
          port: 8080
      middlewares:
        - name: mgd-default-https
        - name: mgd-default-ratelimit
        - name: mgd-default-headervalidation
  tls:
    secretName: scrutiny-tls
